--- a/fin.csproj
+++ b/fin.csproj
@@ -24,6 +24,8 @@
 
     <ItemGroup>
        
+        <PackageReference Include="AutoMapper" Version="12.0.1" />
+       
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.6" />
         <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.5" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
