--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
     "framer-motion": "^6.3.16",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.9.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.34",
