--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
+    "recharts": "^2.4.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
